# edgameclaw

./: .env.example  .gitignore  COMMERCIAL.md  LICENSE-AGPL-3.0  MANIFEST.in  Procfile  README.md  README.zh.md  README_CN.md  README_PYPI.md  REPO_AND_PYPI.md  pyproject.toml  requirements.txt  server.py  start.sh
.github/workflows/: ci.yml  publish-pypi.yml
edgameclaw/: __init__.py  server.py
edgameclaw/engine/: engine.js  player.html
edgameclaw/generator/: __init__.py  course_pipeline.py
engine/: template.html
engine/minigames/: simulation.js
generator/: api.py  assembler.py  course_assembler.py  i18n.py  package_builder.py  pipeline.py  prompts.py  sandbox.py  sandbox_harness.js
node/: engine-state.js  package.json  server.js
static/: index.html  studio.html
